# YourPlace

./: .gitignore  .pylintrc  README.md  YourPlace.db  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
alembic/: env.py
alembic/versions/: 2024_11_17_1838-859cee29ed66_create_database.py  2024_11_24_1537-fcf1aab5058c_add_column_in_users.py  2024_11_28_2204-4cf85080a8bb_drop_user_table.py  2024_11_28_2205-b6cce4f2e7d9_changing_the_user_table.py  2024_12_05_2305-c9b3b1ddad3d_create_user_model_for_fastapi_users.py  2024_12_07_1926-5b43bccc8bf2_create_new_users_model.py  2025_01_08_1722-f5463622f46d_add_column_user_id_in_visitors.py  2025_01_08_1759-7c2038a287f5_add_column_is_admin_in_users.py
api_v1/: __init__.py
api_v1/reservations/: db_controller.py  schemas.py  view.py
api_v1/users/: auth.py  db_controller.py  fastapi_users_routes.py  schemas.py  user_info.py  view.py
app/: YourPlace.db  __init__.py  authentication.py  customStaticFiles.py  database.py  main.py  models.py  repository.py  routes.py  schemas.py
auth/: authentication.py  utils.py
core/: config.py
core/auth/: authentication.py  schemas.py  transport.py  user_manager.py  utils.py
core/models/: __init__.py  db_helper.py  model.py  reservations.py  tables.py  users.py  visitors.py
core/secure/: hashed.py
resources/: index.html  package-lock.json  package.json  vite.config.js
resources/src/: axiosConfig.js  index.css  main.jsx
routes/: api_v1.py  reservation.py  users.py
secure/: hashed.py
static/: calendar.js  style.css
templates/: datetime.html  guests.html  header.html  index.html  result.html  table_selection.html
tests/: YourPlace.db  __init__.py  test_database.py  test_repository.py  test_routes.py
(+57 files in other folders)
