[tool.poetry]
name = "yourplace"
version = "0.1.0"
description = ""
authors = ["efremdana <efremenkodana@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
jinja2 = "^3.1.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
bcrypt = "^4.2.0"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
alembic = "^1.14.0"
pydantic-settings = "^2.6.1"
python-multipart = "^0.0.17"
asyncpg = "^0.30.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.0"}
authentication = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 90
target-version = ['py310']
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 90
multi_line_output = 3
skip_gitignore = true
skip_glob = ["**/migrations/*", "**/settings/*"]
src_paths = ["<your_code_dir>"]
